# yadro-comp-club

./: CMakeLists.txt  README.md  club.txt  main.cpp  tests.cpp
lib/: comp_club.cpp  comp_club.h  compclub.cpp  compclub.h
